# baby-robot-homing

./: README.md  pyproject.toml
blocks/: __init__.py  baby_robot.py  cpg_runtime.py  na_cpg.py
experiments/: demo_behavior_tree.py  gait_final_DR.py  spin_final_DR.py
hardware/: baby_hardware.py  run_behavior_tree_hardware.py
hardware/test/: calibrate_vision.py  plot_run_gait.py  record_battery_phase_sequence.py  record_camera_video.py  record_vision_during_gaits.py  run_gait_no_camera.py  test_camera_hsv.py  test_optitrack.py  test_servos_sequential.py
helper/: analyze_data.ipynb  reencode_video.py  select_best_models.py
helper/calibration/: calibrate_reach_vision_area.py  diagnose_hinge_tracking.py  record_hinge_sweep.py  render_orange_hsv_range.py  render_short_orange_hsv_range.py  tune_hinge_actuator_gains.py
helper/plots/: real_world_exp_data.py
helper/plots/diagonostic/: make_all_diagnostic_plots.py  plot_battery_phase_sequence.py  plot_behavior_timeline.py  plot_distance_to_target.py  plot_vision_timeseries.py
helper/record_gait_video/: record_forward_cpg.py  record_spin_cpg.py  record_stage2_behavior.py
helper/test_size_change/: ab_test_hinge_forward.py  ab_test_hinge_spin.py
helper/visualizer_sim/: visualize_robot.py  visualize_static_robot.py  visualize_turn_signal.py
robot_control/: __init__.py  artifacts.py  behavior.py  config_gait.py  controller.py  controllers.py  domain_randomization.py  evaluation.py  optimizers.py  rendering.py  spin_recording.py  tasks.py  training.py  turning.py  vision.py
wiki/: hardware_implementation_notes.md
(+11 files in other folders)
